--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,9 +19,11 @@
 # in the templates via {{ site.myvariable }}.
 
 title: From First Principles
+author: © First Principles Development LLC
 email: contact@firstprinciplesdevelopment.com
 description: >- # this means to ignore newlines until "baseurl:"
-  From First Principles is a blog about life, business and programming for nerds.
+  From First Principles is a blog about life, 
+  business and programming for nerds.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://firstprinciplesdevelopment.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
