--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -32,6 +32,8 @@ url: "https://firstprinciplesdevelopment.github.io" # the base hostname & protoc
 theme: minima
 plugins:
   - jekyll-feed
+kramdown:
+  syntax_highlighting: coderay
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
